# k3b

./: CMakeLists.txt
debian/: debhelper-build-stamp  files  k3b-data.postinst.debhelper  k3b.substvars  kylin-burner.install  libk3b7-extracodecs.substvars  libk3b7.substvars
debian/patches/: series
po/zh_CN/: k3b.po
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  k3b.cpp  k3bFileFilterDialog.cpp  k3bFileFilterDialog.h  k3bMd5Dialog.cpp  k3bMd5Dialog.h  k3bResultDialog.cpp  k3bResultDialog.h  k3bTitleBar.cpp  k3bTitleBar.h  k3bapplication.cpp  k3baudioprojectinterfaceadaptor.cpp  k3baudioprojectinterfaceadaptor.h  k3baudioprojectinterfaceadaptor.moc  k3baudioprojectinterfaceadaptor.moc_parameters  k3bdataprojectinterfaceadaptor.cpp  k3bdataprojectinterfaceadaptor.h  k3bdataprojectinterfaceadaptor.moc  k3bdataprojectinterfaceadaptor.moc_parameters  k3bdirview.cpp  k3binteractiondialog.cpp  k3binterfaceadaptor.cpp  k3binterfaceadaptor.h  k3binterfaceadaptor.moc  k3binterfaceadaptor.moc_parameters  k3bjobinterfaceadaptor.cpp  k3bjobinterfaceadaptor.h  k3bjobinterfaceadaptor.moc  k3bjobinterfaceadaptor.moc_parameters  k3bjobprogressdialog.cpp  k3bprojectinterfaceadaptor.cpp  k3bprojectinterfaceadaptor.h  k3bprojectinterfaceadaptor.moc  k3bprojectinterfaceadaptor.moc_parameters  k3bwriterselectionwidget.cpp  k3bwriterselectionwidget.h  main.cpp  (+20 more)
src/helper/: CTestTestfile.cmake  (+4 more)
src/pic/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/pic/icon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+482 files in other folders)
